src/test/ui/moves/moves-based-on-type-distribute-copy-over-paren.nll.stderr
error[E0382]: borrow of moved value: `x`
  --> $DIR/moves-based-on-type-distribute-copy-over-paren.rs:11:11
   |
LL |     let x = "hi".to_string();
   |         - move occurs because `x` has type `std::string::String`, which does not implement the `Copy` trait
LL |     let _y = Foo { f:x };
   |                      - value moved here
LL |
LL |     touch(&x);
   |           ^^ value borrowed here after move

error[E0382]: borrow of moved value: `x`
  --> $DIR/moves-based-on-type-distribute-copy-over-paren.rs:20:11
   |
LL |     let x = "hi".to_string();
   |         - move occurs because `x` has type `std::string::String`, which does not implement the `Copy` trait
LL |     let _y = Foo { f:(((x))) };
   |                      ------- value moved here
LL |
LL |     touch(&x);
   |           ^^ value borrowed here after move

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0382`.
